<resources>
    <!--    Login Option-->
    <string name="app_name">FitPlanner</string>
    <string name="app_subtitle">Simplificando sua rotina de treinos.</string>
    <string name="i_am_student">Sou Aluno</string>
    <string name="i_am_personal_trainer">Sou Personal Trainer</string>
    <string name="terms_of_use">Termos de Uso</string>

    <!--    Login-->
    <string name="return_to_previous_screen_content_description">Voltar para a tela anterior</string>
    <string name="student">Aluno</string>
    <string name="personal_trainer">Personal Trainer</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="forgot_my_password">Esqueci minha senha</string>
    <string name="enter">Entrar</string>
    <string name="dont_have_an_account">Não tenho conta</string>
    <string name="app_version_example">0.0.0</string>
    <string name="greeting">Olá, %1$s</string>
    <string name="user">Usuário</string>
    <string name="generic_error_message">No momento estamos com alguns problemas, tente novamente mais tarde.</string>
    <string name="positive_button_option">Ok, entendi</string>

    <!--    Sign Up-->
    <string name="cannot_create_account_message">Atualmente, você não pode criar sua própria conta diretamente no aplicativo. Para criar sua conta, é preciso entrar em contato com o seu personal.</string>
    <string name="sign_up_title">Criar Conta</string>
    <string name="sign_up_subtitle">Preencha as informações abaixo para criar a sua conta.</string>
    <string name="full_name">Nome Completo</string>
    <string name="cellphone">Celular</string>
    <string name="birthdate">Data de Nascimento</string>
    <string name="password_confirmation">Confirme a Senha</string>
    <string name="register">Cadastrar</string>

    <!--    Forgot Password-->
    <string name="forgot_password_title">Recuperar Senha</string>
    <string name="forgot_password_subtitle">Digite seu email no campo abaixo\npara recuperar a sua senha.</string>
    <string name="recover">Recuperar</string>
    <string name="email_sent">Email enviado!</string>
    <string name="email_message_sent">O email de recuperação de senha foi enviado para: %1$s.\nPor favor, verifique sua caixa de entrada e, caso não encontre, verifique sua caixa de spam.</string>
    <string name="invalid_email">Email inválido!</string>
    <string name="generic_error_title">Atenção</string>

    <!--    Menu-->
    <string name="menu_home_title">Início</string>
    <string name="menu_workouts_title">Treinos</string>
    <string name="menu_more_options_title">Mais</string>
    <string name="menu_notifications_title">Notificações</string>

    <!--    Main-->

    <!--    Home-->
    <string name="quote_example">\"A vida é curta para não se aproveitar\" - Luís de Camões</string>

    <!--    Workouts-->
    <string name="loading_available_workouts">Carregando seus treinos...</string>
    <string name="available_workouts">Treinos disponíveis</string>
    <string name="workout_title">Título do treino</string>
    <string name="workout_description">Descrição do treino</string>
    <string name="open_workout">Ver Treino</string>
    <string name="error_loading_workouts_content_description">Erro ao carregar os treinos.</string>
    <string name="workouts_error_title">Não foi possível carregar seus treinos!</string>
    <string name="workouts_error_message">Ocorreu um problema ao tentar carregar seus treinos.\nAguarde alguns minutos e tente novamente.</string>
    <string name="try_again">Tentar Novamente</string>
    <string name="no_workouts_found_content_description">Nenhum treino encontrado.</string>
    <string name="workouts_empty_title">Nenhum treino disponível no momento.</string>
    <string name="workouts_empty_message">Seu treinador ainda não cadastrou treinos para você.\nEntre em contato com ele para verificar.</string>
    <string name="refresh">Atualizar</string>

    <!--    More Options-->
    <string name="more_options">Mais opções</string>

    <!--    Notifications-->
    <string name="notifications_received">Notificações recebidas</string>

    <!--    Exercises-->
    <string name="loading_exercises">Carregando os exercícios...</string>
    <string name="exercises_view_mode_message">Você está em modo de visualização.\nPara começar, clique no botão abaixo.</string>
    <string name="init_workout">Iniciar</string>
    <string name="exercise_title">Título do exercício</string>
    <string name="exercise_series_number">Séries: %1$sx %2$s</string>
    <string name="exercise_weight">Carga: %1$s</string>
    <string name="exercise_interval">Intervalo</string>
    <string name="exercise_edit_weight">Editar Carga</string>

</resources>