<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mcv_exercise_card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_exercise_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/exercise_title"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textColor="@color/md_theme_primary_highContrast" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_exercise_sets_and_reps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exercise_series_number"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:textColor="@color/md_theme_primary_highContrast" />

            <TextView
                android:id="@+id/tv_exercise_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exercise_weight"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:textColor="@color/md_theme_primary_highContrast" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_exercise_rest_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text="@string/exercise_interval"
                app:icon="@drawable/ic_timer" />

            <Button
                android:id="@+id/btn_exercise_edit_weight"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:text="@string/exercise_edit_weight"
                app:icon="@drawable/ic_edit"
                app:strokeColor="@drawable/custom_outlined_button_stroke_color" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>