<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginOptionsActivity">

    <TextView
        android:id="@+id/tv_login_option_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadlineLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_option_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/app_subtitle"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBodySmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_option_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_rounded_borders_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="32dp"
        android:paddingBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_student_login_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:maxWidth="320dp"
            android:minWidth="256dp"
            android:text="@string/i_am_student" />

        <Button
            android:id="@+id/btn_personal_trainer_login_option"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="320dp"
            android:minWidth="256dp"
            android:text="@string/i_am_personal_trainer" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>