<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ForgotPasswordActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_forgot_password_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/return_to_previous_screen_content_description"
        app:backgroundTint="@color/md_theme_surface"
        app:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back"
        app:tint="@color/md_theme_primary_highContrast" />

    <TextView
        android:id="@+id/tv_forgot_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/forgot_password_title"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadlineLarge"
        android:textColor="@color/md_theme_primary_highContrast"
        app:layout_constraintBottom_toTopOf="@id/tv_forgot_password_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_forgot_password_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/forgot_password_subtitle"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBodySmall"
        android:textColor="@color/md_theme_primary_highContrast"
        app:layout_constraintBottom_toTopOf="@id/til_forgot_password_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_forgot_password_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/email"
        android:textColorHint="@color/md_theme_outline_highContrast"
        app:boxStrokeColor="@drawable/custom_text_field_stroke_color"
        app:endIconDrawable="@drawable/ic_alternate_email"
        app:endIconMode="custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_forgot_password_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxWidth="488dp"
            android:minWidth="348dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_forgot_password_recover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:maxWidth="320dp"
        android:minWidth="256dp"
        android:text="@string/recover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_forgot_password_email" />

</androidx.constraintlayout.widget.ConstraintLayout>