<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_login_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:backgroundTint="@color/md_theme_secondaryContainer"
        app:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back_24px"
        app:tint="@color/md_theme_primary_highContrast" />

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/app_greeting"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBodySmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fab_login_back" />

    <TextView
        android:id="@+id/tv_login_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadlineLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

    <LinearLayout
        android:id="@+id/ll_login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_rounded_borders_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="48dp"
        android:paddingBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:hint="@string/email"
            android:textColorHint="@color/md_theme_outline_highContrast"
            app:boxStrokeColor="@drawable/custom_text_field_stroke_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_login_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:maxWidth="488dp"
                android:minWidth="348dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:hint="@string/password"
            android:textColorHint="@color/md_theme_outline_highContrast"
            app:boxStrokeColor="@drawable/custom_text_field_stroke_color"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_login_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxWidth="488dp"
                android:minWidth="348dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login_forgot_password"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:maxWidth="320dp"
            android:minWidth="256dp"
            android:text="@string/forgot_my_password" />

        <Button
            android:id="@+id/btn_login_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:maxWidth="320dp"
            android:minWidth="256dp"
            android:text="@string/enter" />

        <Button
            android:id="@+id/btn_login_sign_up"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="320dp"
            android:minWidth="256dp"
            android:text="@string/dont_have_an_account"
            app:strokeColor="@drawable/custom_outlined_button_stroke_color" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>