<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_exercises"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ExercisesActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mt_exercises_toolbar"
        style="@style/Widget.App.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="@android:color/white"
        app:title="@string/workout_title"
        app:titleCentered="true" />

    <LinearLayout
        android:id="@+id/ll_exercises_loading_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/cpi_exercises_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

        <TextView
            android:id="@+id/tv_exercises_loading_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/loading_exercises"
            android:textAppearance="?attr/textAppearanceBodySmall"
            android:textColor="@color/md_theme_primary_highContrast"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_exercises_list_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/mt_exercises_toolbar">

        <LinearLayout
            style="@style/ExerciseInitContainerBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_exercises_view_mode_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/exercises_view_mode_message"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:textColor="@color/md_theme_primary_highContrast"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_student_login_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="320dp"
                android:minWidth="256dp"
                android:text="@string/init_workout" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_exercises_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/exercise_list_item" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>